--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
         <img src="images/teaberry.png" class="avatar" srcset="images/teaberry.png 2x" alt="">
 
         <!-- Title -->
-        <h1 role="heading">The Teaberry Artisan</h1>
+        <h2 role="heading"></h2>
 
         <!-- Short Bio -->
-        <p>Use the links below to navigate:</p>
+        <p></p>
 
         <!--
 
@@ -101,7 +101,7 @@
         -->
 
         <!-- Etsy -->
-        <a class="button button-etsy" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/etsy.svg" alt="">Shop on Etsy</a><br>
+        <!-- <a class="button button-etsy" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/etsy.svg" alt="">Shop on Etsy</a><br>
 
         <!-- Facebook -->
         <a class="button button-faceb" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/facebook.svg" alt="">Find us on Facebook</a><br>
@@ -110,6 +110,9 @@
         <a class="button button-instagram" href="https://www.instagram.com/theteaberryartisan/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
 
         <!-- Shop -->
+        <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
+
+        <!-- Shopify -->
         <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
 
         <!-- Substack -->
@@ -130,8 +133,14 @@
         <!-- Generic Shopping Bag -->
         <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Visit Our Shop</a><br>
 
-        <!-- Generic Website -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Website</a><br>
+        <!-- Website Home -->
+        <a class="button button-default" href="http://teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Our Website</a><br>
+
+        <!-- Website Recipes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Website</a><br>
+
+        <!-- Website Recipes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Recipes</a><br>
 
         <br>
         <!-- 
