--- a/index.html
+++ b/index.html
@@ -104,43 +104,45 @@
         <!-- <a class="button button-etsy" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/etsy.svg" alt="">Shop on Etsy</a><br>
 
         <!-- Facebook -->
-        <a class="button button-faceb" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/facebook.svg" alt="">Find us on Facebook</a><br>
-
-        <!-- Instagram -->
-        <a class="button button-instagram" href="https://www.instagram.com/theteaberryartisan/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.svg" alt="">Instagram</a><br>
+        <!-- <a class="button button-faceb" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/facebook.svg" alt="">Find us on Facebook</a><br>
 
         <!-- Shop -->
-        <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
+        <!-- <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
 
         <!-- Shopify -->
-        <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
+        <!-- <a class="button button-shop" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shop.svg" alt="">Buy with Shop</a><br>
 
         <!-- Substack -->
         <!-- <a class="button button-substack" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/substack.svg" alt="">Substack</a><br> -->
 
         <!-- Telegram -->
-        <a class="button button-telegram" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/telegram.svg" alt="">Telegram</a><br>
-
-        <!-- YouTube -->
-        <a class="button button-yt" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.svg" alt="">YouTube</a><br>
+        <!-- <a class="button button-telegram" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/telegram.svg" alt="">Telegram</a><br>
 
         <!-- Generic Email -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email Us</a><br>
+        <!-- <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email.svg" alt="">Email Us</a><br>
 
         <!-- Generic Email Alt -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email-alt.svg" alt="">Email Us</a><br>
+        <!-- <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-email-alt.svg" alt="">Email Us</a><br>
 
         <!-- Generic Shopping Bag -->
-        <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Visit Our Shop</a><br>
+        <!-- <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Visit Our Shop</a><br>
 
         <!-- Website Home -->
-        <a class="button button-default" href="http://teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-website.svg" alt="">Visit Our Website</a><br>
-
-        <!-- Website Recipes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Website</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit Our Website</a><br>
 
         <!-- Website Recipes -->
         <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Recipes</a><br>
+
+        <!-- Website Buy It For Life -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Shop: Quality Over Quantity</a><br>
+
+        <!-- YouTube -->
+        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">YouTube</a><br>
+
+        <!-- Instagram -->
+        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Instagram</a><br>
+
+
 
         <br>
         <!-- 
@@ -149,7 +151,7 @@
             This also includes a link to the LittleLink repository to make forking LittleLink easier.
             You can edit or remove anything here to make your own footer.
         -->
-        <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
+        <!-- <p><a href="privacy.html">Privacy Policy</a> | Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener" role="button">LittleLink</a>.</p>
 
       </div>
     </div>
