--- a/index.html
+++ b/index.html
@@ -128,19 +128,25 @@
         <!-- <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Visit Our Shop</a><br>
 
         <!-- Website Home -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit Our Website</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit: Our Website</a><br>
 
         <!-- Website Recipes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Recipes</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Explore: Our Recipes</a><br>
 
         <!-- Website Buy It For Life -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Shop: Quality Over Quantity</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read: Quality Over Quantity</a><br>
+
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop: Totes, Notes, Art</a><br>
+
+        <!-- Website Handcrafted Earrings -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Shop: Handcrafted Earrings</a><br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">YouTube</a><br>
+        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">Watch: YouTube Channel</a><br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Instagram</a><br>
+        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Scroll: Instagram</a><br>
 
 
 
