--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit: Our Website</a><br>
 
         <!-- Website Recipes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Explore: Our Recipes</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Let's Get Cookin': Browse Our Recipes</a><br>
 
         <!-- Website Buy It For Life -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read: Quality Over Quantity</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read: The Quality Over Quantity Blog</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop: Totes, Notes, Art</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/digital-downtown-shoppes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Explore: Our Digital Downtown Shoppes</a><br>
 
         <!-- Website Handcrafted Earrings -->
         <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Shop: Handcrafted Earrings</a><br>
