--- a/index.html
+++ b/index.html
@@ -128,25 +128,34 @@
         <!-- <a class="button button-default" href="#" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/generic-shopping-bag.svg" alt="">Visit Our Shop</a><br>
 
         <!-- Website Home -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit: Our Website</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit Our Website</a><br>
 
         <!-- Website Recipes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Let's Get Cookin': Browse Our Recipes</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/favorite-recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Let's Get Cookin'</a><br>
 
         <!-- Website Buy It For Life -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read: The Quality Over Quantity Blog</a><br>
-
-        <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/digital-downtown-shoppes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Explore: Our Digital Downtown Shoppes</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read Our Quality Over Quantity Blog</a><br>
 
         <!-- Website Handcrafted Earrings -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Shop: Handcrafted Earrings</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Handcrafted Earrings</a><br>
+        
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Apparel</a><br>
+
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Hats</a><br>
+
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Totes</a><br>
+
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/the-little-book-series" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Stationary</a><br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">Watch: YouTube Channel</a><br>
+        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">Visit Our YouTube Channel</a><br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Scroll: Instagram</a><br>
+        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Scroll Our Instagram</a><br>
 
 
 
