--- a/index.html
+++ b/index.html
@@ -138,18 +138,18 @@
 
         <!-- Website Handcrafted Earrings -->
         <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Handcrafted Earrings</a><br>
-        
-        <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Apparel</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Hats</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shirt.png" alt="">Shop Apparel</a><br>
+
+        <!-- Website Totes and Notes -->
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cap.png" alt="">Shop Hats</a><br>
 
         <!-- Website Totes and Notes -->
         <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Totes</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/the-little-book-series" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shopping-bag.png" alt="">Shop Stationary</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/the-little-book-series" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/notebook.png" alt="">Shop Stationary</a><br>
 
         <!-- YouTube -->
         <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">Visit Our YouTube Channel</a><br>
