--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shirt.png" alt="">Shop Apparel</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cap.png" alt="">Shop Hats</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/hat.png" alt="">Shop Caps</a><br>
 
         <!-- Website Totes and Notes -->
         <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tote.png" alt="">Shop Totes</a><br>
