--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <a class="button button-default" href="https://www.teaberryartisans.com/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/teaberry.png" alt="">Visit Our Website</a><br>
 
         <!-- Website Recipes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/recipes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Let's Get Cookin'</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/blogs/recipe-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/cooking.png" alt="">Let's Get Cookin'</a><br>
 
         <!-- Website Buy It For Life -->
         <a class="button button-default" href="https://www.teaberryartisans.com/blogs/quality-over-quantity-blog" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/quality.png" alt="">Read Our Quality Over Quantity Blog</a><br>
