--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
 <body>
 
+  <body style="background-color:rgb(255, 255, 255);">
+
   <!-- Primary Page Layout
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div class="container">
@@ -140,22 +142,22 @@
         <a class="button button-default" href="https://www.teaberryartisans.com/collections" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/ear.png" alt="">Handcrafted Earrings</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shirt.png" alt="">Shop Apparel</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/pages/apparel" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/shirt.png" alt="">Apparel</a><br>
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/hat.png" alt="">Shop Caps</a><br>
+        <!-- <a class="button button-default" href="https://www.teaberryartisans.com/collections/hat" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/hat.png" alt="">Caps</a><br> -->
 
         <!-- Website Totes and Notes -->
         <!-- <a class="button button-default" href="https://www.teaberryartisans.com/collections/totes" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/tote.png" alt="">Shop Totes</a><br> -->
 
         <!-- Website Totes and Notes -->
-        <a class="button button-default" href="https://www.teaberryartisans.com/collections/the-little-book-series" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/notebook.png" alt="">Shop Stationary</a><br>
+        <a class="button button-default" href="https://www.teaberryartisans.com/collections/the-little-book-series" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/notebook.png" alt="">Stationary</a><br>
 
         <!-- YouTube -->
-        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">Visit Our YouTube Channel</a><br>
+        <a class="button button-yt" href="https://www.youtube.com/@TeaberryArtisans" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/youtube.png" alt="">YouTube</a><br>
 
         <!-- Instagram -->
-        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Scroll Our Instagram</a><br>
+        <a class="button button-instagram" href="https://www.instagram.com/teaberryartisans/" target="_blank" rel="noopener" role="button"><img class="icon" src="images/icons/instagram.png" alt="">Instagram</a><br>
 
 
 
